test fix splide slide

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         </div>
     </form>
   </modal-dialog>
+  <script src="/src/vendors/splide-slide.min.js"></script>
   <script type="module" src="/src/main.js"></script>
-  <script type="module" src="/src/vendors/splide-slide.min.js"></script>
 </body>
 </html>
