test fix splide import

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="showcase.css">
     <link rel="stylesheet" href="/icon-font/icons.css">
-    <link rel="stylesheet" href="/src/vendors/splide-slide.min.css">
+    <link rel="stylesheet" href="/vendors/splide-slide.min.css">
 </head>
 <body>
   <div id="app"></div>
@@ -103,7 +103,7 @@
         </div>
     </form>
   </modal-dialog>
-  <script src="/src/vendors/splide-slide.min.js"></script>
-  <script type="module" src="/src/main.js"></script>
+    <script src="/vendors/splide-slide.min.js"></script>
+    <script type="module" src="/src/main.js"></script>
 </body>
 </html>
