test fix build on vercel

--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
     </form>
   </modal-dialog>
     <script src="/vendors/splide-slide.min.js"></script>
-    <script type="module" src="/src/main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 </html>
