fix carousel images

--- a/public/parts/jumbo.html
+++ b/public/parts/jumbo.html
@@ -27,19 +27,19 @@
               <div class="splide__track u-h-100">
                   <ul class="splide__list">
                       <li class="splide__slide">
-                          <img width="100%" height="100%" src="${base}assets/pictures/lekinff-living.jpg" alt="">
+                          <img width="100%" height="100%" src="./assets/pictures/lekinff-living.jpg" alt="">
                       </li>
                       <li class="splide__slide">
                           <img width="100%" height="100%" src="./assets/pictures/lekinff-stairs.jpg" alt="">
                       </li>
                       <li class="splide__slide">
-                          <img width="100%" height="100%" src="${base}assets/pictures/lekinff-outside.jpg" alt="">
+                          <img width="100%" height="100%" src="./assets/pictures/lekinff-outside.jpg" alt="">
                       </li>
                       <li class="splide__slide">
-                          <img width="100%" height="100%" src="${base}assets/pictures/lekinff-outside-2.jpg" alt="">
+                          <img width="100%" height="100%" src="./assets/pictures/lekinff-outside-2.jpg" alt="">
                       </li>
                       <li class="splide__slide">
-                          <img width="100%" height="100%" src="${base}assets/pictures/kitchen-design.jpg" alt="">
+                          <img width="100%" height="100%" src="./assets/pictures/kitchen-design.jpg" alt="">
                       </li>
                   </ul>
               </div>
